--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/Gallery"
+            android:background="@color/colorPrimaryLight"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" android:textColorLink="@color/colorPrimary"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     //Selecting a photo from Gallery
@@ -47,19 +44,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:background="@color/colorPrimaryLight"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/clearAll" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:textColorLink="@color/colorPrimary"/>
+            app:layout_constraintStart_toEndOf="@+id/Camera"/>
+
     <Button
             android:id="@+id/clearAll"
             android:text="CLEAR ALL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="44dp"
-            android:layout_marginRight="44dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryLight"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColorLink="@color/colorPrimaryDark"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
