--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#d01e1e</color>
-    <color name="colorPrimaryDark">#d94252</color>
+    <color name="colorPrimary">#2837e4</color>
+    <color name="colorPrimaryLight">#4a80b5</color>
+    <color name="colorPrimaryDark">#040467</color>
     <color name="colorAccent">#ef073d</color>
 </resources>
